--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="dns-prefetch" href="https://api.themoviedb.org" />
     <link rel="dns-prefetch" href="https://image.tmdb.org" />
     
-    <title>BingeCinema - Movie Discovery App</title>
+    <title>BingeCinema</title>
   </head>
   <body>
     <div id="root"></div>
